Add BullMQ queue system with Redis Cloud and BullBoard dashboard

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ ZOOM_SDK_SECRET=BfViHvD29CACnhtDZq8jtsWNtbCYZE7o2Gp6
 
 # Server Configuration
 PORT=4000 
+
+
+# Redis Configuration (for BullMQ) - Redis Cloud
+REDIS_URL=redis://default:YpBjVb5t1XrZ0DsFtC5EVYDDKTmroOui@redis-17370.c263.us-east-1-2.ec2.redns.redis-cloud.com:17370
