--- a/env.example
+++ b/env.example
@@ -4,4 +4,20 @@ ZOOM_SDK_KEY=your_zoom_sdk_key_here
 ZOOM_SDK_SECRET=your_zoom_sdk_secret_here
 
 # Server Configuration
-PORT=4000 
+PORT=4000
+
+# Redis Configuration (for BullMQ) - Online Redis Service
+# For Redis Cloud, Upstash, or other online Redis providers
+REDIS_URL=redis://default:your-password@redis-17370.c263.us-east-1-2.ec2.redns.redis-cloud.com:17370
+
+# Alternative: Individual Redis parameters (if not using URL)
+# REDIS_HOST=your-redis-host.redis.cloud.com
+# REDIS_PORT=6379
+# REDIS_PASSWORD=your-redis-password
+# REDIS_DB=0
+
+# For Upstash Redis (example)
+# REDIS_URL=redis://default:your-password@your-host.upstash.io:6379
+
+# For Redis Cloud (example)
+# REDIS_URL=redis://default:your-password@redis-17370.c263.us-east-1-2.ec2.redns.redis-cloud.com:17370 
