--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "test-webhook": "node test-webhook.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/api": "^5.10.0",
+    "@bull-board/express": "^5.10.0",
+    "bullmq": "^5.56.9",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "jsrsasign": "^11.1.0"
+    "jsrsasign": "^11.1.0",
+    "ioredis": "^5.3.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
