Add webhook validation support for Zoom webhooks

--- a/env.example
+++ b/env.example
@@ -20,4 +20,8 @@ REDIS_URL=redis://default:your-password@redis-17370.c263.us-east-1-2.ec2.redns.r
 # REDIS_URL=redis://default:your-password@your-host.upstash.io:6379
 
 # For Redis Cloud (example)
-# REDIS_URL=redis://default:your-password@redis-17370.c263.us-east-1-2.ec2.redns.redis-cloud.com:17370 
+# REDIS_URL=redis://default:your-password@redis-17370.c263.us-east-1-2.ec2.redns.redis-cloud.com:17370
+
+# Zoom Webhook Configuration
+# Get this from your Zoom app's Event Subscriptions page
+ZOOM_WEBHOOK_SECRET_TOKEN=your_webhook_secret_token_here 
