made some changes in key

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 # Get these from your Zoom Developer Console
 ZOOM_SDK_KEY=eYvKzhfuVWHk8db56pJ0q9gp0nvNxj11pbUJ
 ZOOM_SDK_SECRET=BfViHvD29CACnhtDZq8jtsWNtbCYZE7o2Gp6
+ZOOM_WEBHOOK_SECRET_TOKEN=6IWZEVhZTlar1MPd5YeOOg
 
 # Server Configuration
 PORT=4000 
