now everything updating in the database as it is happening in real time

--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ PORT=4000
 
 # Redis Configuration (for BullMQ) - Redis Cloud
 REDIS_URL=redis://default:YpBjVb5t1XrZ0DsFtC5EVYDDKTmroOui@redis-17370.c263.us-east-1-2.ec2.redns.redis-cloud.com:17370
+
+DB_HOST = dinero-prod.c1nvajieufmh.ap-south-1.rds.amazonaws.com
+DB_PASSWORD = iRpQRssgTiWHFO4ANrz2
+DB_PORT=3306
+DB_NAME = Mu_Meet
+DB_USER=admin
