--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "jsrsasign": "^11.1.0",
-    "ioredis": "^5.3.2",
-    "node-fetch": "^3.3.2"
+    "mysql2": "^3.14.3",
+    "node-fetch": "^3.3.2",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
