--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "@bull-board/api": "^5.10.0",
     "@bull-board/express": "^5.10.0",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.11.0",
     "bullmq": "^5.56.9",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "fs-extra": "^11.3.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "jsrsasign": "^11.1.0",
