--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,156 @@
+# =============================================================================
+# DEPENDENCIES
+# =============================================================================
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# =============================================================================
+# ENVIRONMENT VARIABLES
+# =============================================================================
+# Never commit actual environment files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# =============================================================================
+# LOGS
+# =============================================================================
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# =============================================================================
+# RUNTIME DATA
+# =============================================================================
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# =============================================================================
+# COVERAGE DIRECTORY
+# =============================================================================
+coverage/
+*.lcov
+
+# =============================================================================
+# NYPM
+# =============================================================================
+.npm
+.eslintcache
+
+# =============================================================================
+# OPTIONAL NPM CACHE DIRECTORY
+# =============================================================================
+.npm
+
+# =============================================================================
+# OPTIONAL REPL HISTORY
+# =============================================================================
+.node_repl_history
+
+# =============================================================================
+# OUTPUT OF 'NPM PACK'
+# =============================================================================
+*.tgz
+
+# =============================================================================
+# YARN INTEGRITY FILE
+# =============================================================================
+.yarn-integrity
+
+# =============================================================================
+# DOTENV ENVIRONMENT VARIABLES FILE
+# =============================================================================
+.env
+.env.test
+
+# =============================================================================
+# PARCEL-BUNDLER (1.X)
+# =============================================================================
+.cache
+.parcel-cache
+
+# =============================================================================
+# NEXT.JS BUILD OUTPUT
+# =============================================================================
+.next
+
+# =============================================================================
+# NUXT.JS BUILD / GENERATE OUTPUT
+# =============================================================================
+.nuxt
+dist
+
+# =============================================================================
+# GATSBY FILES
+# =============================================================================
+.cache/
+public
+
+# =============================================================================
+# STORYBOOK BUILD OUTPUTS
+# =============================================================================
+.out
+.storybook-out
+
+# =============================================================================
+# TEMPORARY FOLDERS
+# =============================================================================
+tmp/
+temp/
+
+# =============================================================================
+# IDE AND EDITOR FILES
+# =============================================================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# =============================================================================
+# OS GENERATED FILES
+# =============================================================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# =============================================================================
+# DATABASE FILES
+# =============================================================================
+*.sqlite
+*.db
+
+# =============================================================================
+# UPLOADED FILES
+# =============================================================================
+uploads/
+recordings/
+temp-uploads/
+
+# =============================================================================
+# SSL CERTIFICATES
+# =============================================================================
+*.pem
+*.key
+*.crt
+*.csr
+
+# =============================================================================
+# BACKUP FILES
+# =============================================================================
+*.bak
+*.backup
+*.old
