--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
     "@bull-board/api": "^5.10.0",
     "@bull-board/express": "^5.10.0",
     "aws-sdk": "^2.1692.0",
